maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:10: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    }else if (getDirection() == Direction.NORD && sommeAngle = 0){
                                               ^Escaper:24: error: not found: value sommAngle
    sommAngle+=1
    ^Escaper:27: error: value +=- is not a member of Int
    sommeAngle+=-1
              ^Escaper:53: error: not found: value estFacemur
  if (!estFacemur()){
       ^Escaper:58: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if (estFaceMur()){
        ^